# sliceagent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  install.ps1  install.sh  memagent.toml.example  pyproject.toml  sliceagent.toml.example
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  provider_concurrency_probe.py  run.py  subagent_fanout.py
benchmarks/multiturn_coding/s1_longhorizon_debug/: meta.json  prompts.json  setup.py  verify.py
benchmarks/multiturn_coding/s2_largefile_bug/: reference_fix.py  setup.py
benchmarks/multiturn_coding/s2_taskdag_scheduler/: meta.json  prompts.json  reference_fix.py  setup.py  verify.py
benchmarks/multiturn_coding/s3_intervalset_algebra/: meta.json  prompts.json  reference_fix.py  setup.py  verify.py
benchmarks/multiturn_coding/s3_multifile_refactor/: meta.json  prompts.json  verify.py
docs/: ARCHITECTURE.md  CACHE-RETRIEVAL-DESIGN.md  CONFIGURATION.md  ENDGAME-CONTEXT-DESIGN.md  MEMEM-DIAGNOSIS.md  MEMORY-LAYERS-DESIGN.md  MEMORY-SPEC.md  OUTPUT.md  STEP3-PLAN.md  SUBAGENT-DESIGN.md  TROUBLESHOOTING.md
evals/: __init__.py  cases.py  context_contract_eval.py  h2h_reliability.py  h2h_run.py  oldprompt_memory_model.txt  probe_learn.py  receipt_claims.py  receipt_prompt_ab.py  run.py  runner.py  self_inspection_tool_eval.py  selfnarrative_ab.py  usersim.py  usersim_pty.py
evals/h2h/: .gitignore
evals/h2h/s1_longhorizon_debug/: reference_fix.py
evals/h2h/s2_largefile_bug/: meta.json  prompts.json  setup.py  verify.py
evals/h2h/s3_multifile_refactor/: reference_fix.py  setup.py  verify.py
evals/swebench/: README.md  RESULTS.md  dump_instances.py  run_agent.py
examples/plugins/hello/: __init__.py  plugin.toml
prototype/: README.md  agent-slice.js  agent.js  core.js  package.json
scripts/: check_windows_footguns.py  gen_config_reference.py  run_tests.sh
src/memagent/: __init__.py  __main__.py  access.py  agents.py  background_review.py  binsniff.py  cli.py  clock.py  code_grep.py  code_index.py  config.py  consolidate.py  context_overflow.py  cron.py  envspec.py  episode.py  errors.py  events.py  finding_types.py  flags.py  fuzzy.py  guardrails.py  guidance.py  hippocampus.py  history.py  hooks.py  interfaces.py  llm.py  loop.py  mcp_client.py  mcp_security.py  memory.py  metrics.py  mining.py  model_catalog.py  monitor.py  neocortex.py  onboarding.py  oracle.py  pagetable.py  (+35 more)
src/sliceagent/: __init__.py  __main__.py  access.py  active_work.py  agents.py  background_review.py  cli.py  code_grep.py  code_index.py  config.py  context.py  context_compiler.py  context_overflow.py  contextfs.py  deliverables.py  discourse.py  envspec.py  errors.py  event_ledger.py  events.py  execution.py  fan_in.py  finding_types.py  flags.py  guardrails.py  guidance.py  hippocampus.py  hooks.py  identity.py  intent.py  interfaces.py  knowledge.py  knowledge_index.py  llm.py  loop.py  mcp_client.py  memory.py  mentions.py  metrics.py  model_catalog.py  (+55 more)
tests/: README.md  test_active_focus.py  test_active_work.py  test_active_work_persistence.py  test_admission_retirement.py  test_agents.py  test_artifact_federation.py  test_ask_echo.py  test_ask_user.py  test_authority_calibration.py  test_background_review.py  test_benchmark_runner.py  test_binary_view.py  test_block_rendering.py  test_bound_is_relevance.py  test_breadth_e2e.py  test_bugfix_2b.py  test_bugfix_breadth_wave.py  test_bugfix_current_request.py  test_bugfix_linenum.py  test_bugfix_loop_wave.py  test_bugfix_memory_wave.py  test_bugfix_p0a.py  test_bugfix_p0b.py  test_bugfix_p0c.py  test_bugfix_selfreview.py  test_bugfix_selfreview_siblings.py  test_bugfix_skills_h1.py  test_bugfix_slice_wave.py  test_bugfix_subagent_wave.py  test_bugfix_tools_wave.py  test_bughunt_fixes.py  test_cache_manifest.py  test_catastrophic_safeguard.py  test_checkpoint.py  test_cli_smoke.py  test_closure.py  test_code_grep.py  test_code_index.py  test_config_docs_current.py  (+146 more)
