[project]
name = "memagent"
dynamic = ["version"]   # single-sourced from src/memagent/__init__.py (see [tool.hatch.version])
description = "A memory-native coding agent: deterministic, bounded, reconstructed context (slice architecture)."
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "TT-Wang" }]
keywords = ["coding-agent", "llm", "agent", "context-management", "memory", "cli", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "openai>=1.40",
    "httpx>=0.27",
    # memem is the cross-session memory backbone (in-process, behind the Memory interface).
    # numpy is required because memem.retrieve imports it but doesn't pin it in its base deps.
    # (No torch: we use memem's BM25/FTS path, not the heavy `embedding` extra.)
    "numpy>=1.24",
    "memem @ git+https://github.com/TT-Wang/memem@2705e7d8f2a3718c6fa8384631a9f3157b15e9b4",
    "mcp>=1.0",   # official MCP SDK — connect external MCP servers as tools (Step 3.3)
    "tomli>=1.2; python_version<'3.11'",  # tomllib backport for plugin manifests on Python 3.10
]

[project.optional-dependencies]
# Precision upgrade for the RELATED CODE map's symbol graph (precise defs/refs, no regex
# false-positives). OPTIONAL: code_index._ts_def_names falls back to a regex when absent, so the
# graph map works without it. `pip install -e .[treesitter]`.
treesitter = ["tree-sitter>=0.21", "tree-sitter-python>=0.21"]
# Rich terminal UI: tool-call cards, inline diffs, status footer, slash palette, prompt_toolkit
# input (history/completion/ctrl-c-abort). OPTIONAL: the CLI falls back to plain print()+input()
# when absent (and when piped/headless, e.g. the eval). `pip install -e .[tui]`. Borrowed from
# Hermes' rich+prompt_toolkit stack; plugs into the event-sink seam, never touches the moat.
tui = ["rich>=13", "prompt_toolkit>=3.0", "textual>=0.85"]
# Dev toolchain: test runner + linter (CI installs `.[dev]`). `pip install -e .[dev]`.
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
memagent = "memagent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# memem is declared as a git direct-reference dependency (see project.dependencies).
allow-direct-references = true

[tool.hatch.version]
path = "src/memagent/__init__.py"   # the single version source (__version__)

[tool.hatch.build.targets.wheel]
packages = ["src/memagent"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["prototype", "brain", "runs", "scratch", ".venv"]

[tool.ruff.lint]
# ruff's default real-bug set (E4 imports · E7 statements · E9 syntax · F pyflakes). NOT E5/E1/E2/W:
# the codebase deliberately uses long comment lines + dense formatting, so line-length/whitespace
# rules would be all noise. Lint for BUGS, not style.
select = ["E4", "E7", "E9", "F"]
# Deliberate house style, NOT bugs: E402 path-setup-before-import, E701/E702 terse one-liners
# (pervasive + intentional), E731 small local lambdas.
ignore = ["E402", "E701", "E702", "E731"]

[tool.ruff.lint.per-file-ignores]
# tests + eval scripts (not the shippable package): allow bound-but-unused intermediates + terse loop vars.
"tests/*" = ["F841", "E741"]
"evals/*" = ["F841", "E741"]
